--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,17 @@
+cmake_minimum_required(VERSION 3.10)
+
+configure_file(settings.json ${CMAKE_BINARY_DIR}/data/settings.json)
+
 add_executable(simple-game
     src/main.cpp
     src/simple_game.cpp
 )
-target_include_directories(simple-game
-    PUBLIC
-    "${CMAKE_CURRENT_SOURCE_DIR}/include"
-)
-target_link_libraries(simple-game
-    PUBLIC
-    sigma-core
-    sigma-opengl-graphics
-    sigma-tools
 
-    stb::stb
-)
+target_include_directories(simple-game PUBLIC include)
+target_link_libraries(simple-game PUBLIC sigma-core sigma-opengl SDL2::SDL2 Assimp::assimp)
 
-configure_file(settings.json ${CMAKE_BINARY_DIR}/data/settings.json)
+target_package_resources(simple-game resources)
 
-add_resources(simple-game "${CMAKE_CURRENT_SOURCE_DIR}/resources")
+if(COTIRE_CMAKE_MODULE_VERSION)
+  cotire(simple-game)
+endif()
