--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
+project(simple-game)
 
 configure_file(settings.json ${CMAKE_BINARY_DIR}/data/settings.json)
 
