Better resource baking.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,193 @@ add_executable(simple-game
 target_include_directories(simple-game PUBLIC include)
 target_link_libraries(simple-game PUBLIC sigma-core sigma-opengl SDL2::SDL2 Assimp::assimp)
 
-target_package_resources(simple-game resources)
-
 if(COTIRE_CMAKE_MODULE_VERSION)
-  cotire(simple-game)
+    cotire(simple-game)
 endif()
+
+add_package(simple-game-package
+    "charcoal.smat"
+    "default_basecolor.png"
+    "default_metalness.png"
+    "default_normal.png"
+    "default_roughness.png"
+    "default.smat"
+    "fullscreen_quad.dae"
+    "gold.smat"
+    "material_ball.fbx"
+    "material_test_scene.bpt"
+    "material_test_scene.fbx"
+    "proprietary/06-07_Day_H_4K_irradiance.hdr"
+    "proprietary/06-07_Day_H_4K_irradiance.stex"
+    "proprietary/06-07_Day_H_4K.hdr"
+    "proprietary/06-07_Day_H_4K.stex"
+    "proprietary/Floor/tiles1.smat"
+    "proprietary/Floor/Tiles1/Tiles 1_Alb.jpg"
+    "proprietary/Floor/Tiles1/Tiles 1_AO.jpg"
+    "proprietary/Floor/Tiles1/Tiles 1_Dif.jpg"
+    "proprietary/Floor/Tiles1/Tiles 1_Dis.jpg"
+    "proprietary/Floor/Tiles1/Tiles 1_Nor.jpg"
+    "proprietary/Floor/Tiles1/Tiles 1_Ref.jpg"
+    "proprietary/Floor/Tiles1/Tiles 1_Rou.jpg"
+    "proprietary/sponza/arch.smat"
+    "proprietary/sponza/bricks.smat"
+    "proprietary/sponza/ceiling.smat"
+    "proprietary/sponza/chain.smat"
+    "proprietary/sponza/column_a.smat"
+    "proprietary/sponza/column_b.smat"
+    "proprietary/sponza/column_c.smat"
+    "proprietary/sponza/details.smat"
+    "proprietary/sponza/fabric_a.smat"
+    "proprietary/sponza/fabric_c.smat"
+    "proprietary/sponza/fabric_d.smat"
+    "proprietary/sponza/fabric_e.smat"
+    "proprietary/sponza/fabric_f.smat"
+    "proprietary/sponza/fabric_g.smat"
+    "proprietary/sponza/flagpole.smat"
+    "proprietary/sponza/floor.smat"
+    "proprietary/sponza/leaf.smat"
+    "proprietary/sponza/Material__25.smat"
+    "proprietary/sponza/Material__298.smat"
+    "proprietary/sponza/Material__47.smat"
+    "proprietary/sponza/Material__57.smat"
+    "proprietary/sponza/roof.smat"
+    "proprietary/sponza/sponza.blend"
+    "proprietary/sponza/sponza.bpt"
+    #"proprietary/sponza/sponza.fbx"
+    "proprietary/sponza/textures/Background_Albedo.png"
+    "proprietary/sponza/textures/background_ddn.png"
+    "proprietary/sponza/textures/Background_Normal.png"
+    "proprietary/sponza/textures/Background_Roughness.png"
+    "proprietary/sponza/textures/background.png"
+    "proprietary/sponza/textures/chain_texture_ddn.png"
+    "proprietary/sponza/textures/chain_texture_mask.png"
+    "proprietary/sponza/textures/chain_texture.png"
+    "proprietary/sponza/textures/ChainTexture_Albedo.png"
+    "proprietary/sponza/textures/ChainTexture_Metallic.png"
+    "proprietary/sponza/textures/ChainTexture_Normal.png"
+    "proprietary/sponza/textures/ChainTexture_Roughness.png"
+    "proprietary/sponza/textures/copyright.txt"
+    "proprietary/sponza/textures/Dielectric_metallic.png"
+    "proprietary/sponza/textures/gi_flag.png"
+    "proprietary/sponza/textures/Lion_Albedo.png"
+    "proprietary/sponza/textures/lion_ddn.png"
+    "proprietary/sponza/textures/Lion_Normal.png"
+    "proprietary/sponza/textures/Lion_Roughness.png"
+    "proprietary/sponza/textures/lion.png"
+    "proprietary/sponza/textures/lion2_ddn.png"
+    "proprietary/sponza/textures/Metallic_metallic.png"
+    "proprietary/sponza/textures/spnza_bricks_a_ddn.png"
+    "proprietary/sponza/textures/spnza_bricks_a_diff.png"
+    "proprietary/sponza/textures/spnza_bricks_a_spec.png"
+    "proprietary/sponza/textures/sponza_arch_ddn.png"
+    "proprietary/sponza/textures/sponza_arch_diff.png"
+    "proprietary/sponza/textures/Sponza_Arch_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Arch_normal.png"
+    "proprietary/sponza/textures/Sponza_Arch_roughness.png"
+    "proprietary/sponza/textures/sponza_arch_spec.png"
+    "proprietary/sponza/textures/Sponza_Bricks_a_Albedo.png"
+    "proprietary/sponza/textures/Sponza_Bricks_a_Normal.png"
+    "proprietary/sponza/textures/Sponza_Bricks_a_Roughness.png"
+    "proprietary/sponza/textures/sponza_ceiling_a_diff.png"
+    "proprietary/sponza/textures/sponza_ceiling_a_spec.png"
+    "proprietary/sponza/textures/Sponza_Ceiling_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Ceiling_normal.png"
+    "proprietary/sponza/textures/Sponza_Ceiling_roughness.png"
+    "proprietary/sponza/textures/sponza_column_a_ddn.png"
+    "proprietary/sponza/textures/sponza_column_a_diff.png"
+    "proprietary/sponza/textures/Sponza_Column_a_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Column_a_normal.png"
+    "proprietary/sponza/textures/Sponza_Column_a_roughness.png"
+    "proprietary/sponza/textures/sponza_column_a_spec.png"
+    "proprietary/sponza/textures/sponza_column_b_ddn.png"
+    "proprietary/sponza/textures/sponza_column_b_diff.png"
+    "proprietary/sponza/textures/Sponza_Column_b_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Column_b_normal.png"
+    "proprietary/sponza/textures/Sponza_Column_b_roughness.png"
+    "proprietary/sponza/textures/sponza_column_b_spec.png"
+    "proprietary/sponza/textures/sponza_column_c_ddn.png"
+    "proprietary/sponza/textures/sponza_column_c_diff.png"
+    "proprietary/sponza/textures/Sponza_Column_c_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Column_c_normal.png"
+    "proprietary/sponza/textures/Sponza_Column_c_roughness.png"
+    "proprietary/sponza/textures/sponza_column_c_spec.png"
+    "proprietary/sponza/textures/sponza_curtain_blue_diff.png"
+    "proprietary/sponza/textures/Sponza_Curtain_Blue_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Curtain_Blue_normal.png"
+    "proprietary/sponza/textures/sponza_curtain_diff.png"
+    "proprietary/sponza/textures/sponza_curtain_green_diff.png"
+    "proprietary/sponza/textures/Sponza_Curtain_Green_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Curtain_Green_normal.png"
+    "proprietary/sponza/textures/Sponza_Curtain_metallic.png"
+    "proprietary/sponza/textures/Sponza_Curtain_Red_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Curtain_Red_normal.png"
+    "proprietary/sponza/textures/Sponza_Curtain_roughness.png"
+    "proprietary/sponza/textures/sponza_details_diff.png"
+    "proprietary/sponza/textures/Sponza_Details_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Details_metallic.png"
+    "proprietary/sponza/textures/Sponza_Details_normal.png"
+    "proprietary/sponza/textures/Sponza_Details_roughness.png"
+    "proprietary/sponza/textures/sponza_details_spec.png"
+    "proprietary/sponza/textures/sponza_fabric_blue_diff.png"
+    "proprietary/sponza/textures/Sponza_Fabric_Blue_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Fabric_Blue_normal.png"
+    "proprietary/sponza/textures/sponza_fabric_diff.png"
+    "proprietary/sponza/textures/sponza_fabric_green_diff.png"
+    "proprietary/sponza/textures/Sponza_Fabric_Green_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Fabric_Green_normal.png"
+    "proprietary/sponza/textures/Sponza_Fabric_metallic.png"
+    "proprietary/sponza/textures/Sponza_Fabric_Red_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Fabric_Red_normal.png"
+    "proprietary/sponza/textures/Sponza_Fabric_roughness.png"
+    "proprietary/sponza/textures/sponza_fabric_spec.png"
+    "proprietary/sponza/textures/sponza_flagpole_diff.png"
+    "proprietary/sponza/textures/Sponza_FlagPole_diffuse.png"
+    "proprietary/sponza/textures/Sponza_FlagPole_normal.png"
+    "proprietary/sponza/textures/Sponza_FlagPole_roughness.png"
+    "proprietary/sponza/textures/sponza_flagpole_spec.png"
+    "proprietary/sponza/textures/sponza_floor_a_diff.png"
+    "proprietary/sponza/textures/sponza_floor_a_spec.png"
+    "proprietary/sponza/textures/Sponza_Floor_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Floor_normal.png"
+    "proprietary/sponza/textures/Sponza_Floor_roughness.png"
+    "proprietary/sponza/textures/sponza_roof_diff.png"
+    "proprietary/sponza/textures/Sponza_Roof_diffuse.png"
+    "proprietary/sponza/textures/Sponza_Roof_normal.png"
+    "proprietary/sponza/textures/Sponza_Roof_roughness.png"
+    "proprietary/sponza/textures/sponza_thorn_ddn.png"
+    "proprietary/sponza/textures/sponza_thorn_diff.png"
+    "proprietary/sponza/textures/Sponza_Thorn_diffuse.png"
+    "proprietary/sponza/textures/sponza_thorn_mask.png"
+    "proprietary/sponza/textures/Sponza_Thorn_normal.png"
+    "proprietary/sponza/textures/Sponza_Thorn_roughness.png"
+    "proprietary/sponza/textures/sponza_thorn_spec.png"
+    "proprietary/sponza/textures/Thumbs.db"
+    "proprietary/sponza/textures/vase_ddn.png"
+    "proprietary/sponza/textures/vase_dif.png"
+    "proprietary/sponza/textures/Vase_diffuse.png"
+    "proprietary/sponza/textures/vase_hanging.png"
+    "proprietary/sponza/textures/Vase_normal.png"
+    "proprietary/sponza/textures/vase_plant_mask.png"
+    "proprietary/sponza/textures/vase_plant_spec.png"
+    "proprietary/sponza/textures/vase_plant.png"
+    "proprietary/sponza/textures/Vase_roughness.png"
+    "proprietary/sponza/textures/vase_round_ddn.png"
+    "proprietary/sponza/textures/vase_round_spec.png"
+    "proprietary/sponza/textures/vase_round.png"
+    "proprietary/sponza/textures/VaseHanging_diffuse.png"
+    "proprietary/sponza/textures/VaseHanging_normal.png"
+    "proprietary/sponza/textures/VaseHanging_roughness.png"
+    "proprietary/sponza/textures/VasePlant_diffuse.png"
+    "proprietary/sponza/textures/VasePlant_normal.png"
+    "proprietary/sponza/textures/VasePlant_roughness.png"
+    "proprietary/sponza/textures/VaseRound_diffuse.png"
+    "proprietary/sponza/textures/VaseRound_normal.png"
+    "proprietary/sponza/textures/VaseRound_roughness.png"
+    "proprietary/sponza/vase_hanging.smat"
+    "proprietary/sponza/vase_round.smat"
+    "proprietary/sponza/vase.smat"
+    "white_plastic.smat"
+    PACKAGE_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/resources"
+)
+
+add_dependencies(simple-game simple-game-package)
